@@ -1,3 +1,10 @@
+2006-01-08 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
+	* include/Win_GParted.h,
+	  src/Win_GParted.cc: added visual feedback when unmounting or
+	  deactivating swap. This can be usefull when it takes longer then
+	  usual. 
+	  
 2006-01-07 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
 	* src/Dialog_Partition_Info.cc: removed separator in accordance to the
